issue: implementando verificação de necessidade de reenvio e envio corretamente de emails
