# NewsLetterService/src/routes/inscricao.routes.ts
@@ -4,12 +4,14 @@ import { GetInscricaoController } from "../modules/Inscricao/useCases/getInscric
 import { DesativarInscricaoController } from "../modules/Inscricao/useCases/updateInscricao/DesativarInscricaoController";
 import { ValidaInscricaoController } from "../modules/Inscricao/useCases/validaInscricao/ValidaInscricaoController";
 import { GetInscricaoByTypeController } from "../modules/Inscricao/useCases/getInscricao/GetInscricaoByTypeController";
+import { AtualizaUltimoRecebidoController } from "../modules/Inscricao/useCases/updateInscricao/AtualizaUltimoRecebidoController";
 
 const createInscricao = new CreateInscricaoController();
 const getInscricao = new GetInscricaoController();
 const desativarInscricao = new DesativarInscricaoController();
 const validaInscricao = new ValidaInscricaoController();
 const getInscricaoByTypeController = new GetInscricaoByTypeController();
+const atualizaUltimoRecebido = new AtualizaUltimoRecebidoController();
 
 const inscricaoRoutes = Router();
 
@@ -18,6 +20,7 @@ inscricaoRoutes.get("/", getInscricao.handle);
 inscricaoRoutes.get("/periodicidade", getInscricaoByTypeController.handle);
 inscricaoRoutes.put("/desativar", desativarInscricao.handle);
 inscricaoRoutes.post("/login", validaInscricao.handle);
+inscricaoRoutes.put("/ultimoRecebido", atualizaUltimoRecebido.handle)
 
 
 export { inscricaoRoutes };
